fix api, readme, delete comments, add technical decision
